[gd_scene load_steps=25 format=3 uid="uid://bl7tp660hpbgu"]

[ext_resource type="Script" uid="uid://coji8x5p1svqt" path="res://Scripts/Player/player_base.gd" id="1_pcxub"]
[ext_resource type="Shader" uid="uid://bhw4eqxw532og" path="res://Scripts/Player/Shaders/player-base.gdshader" id="2_7oum1"]
[ext_resource type="Texture2D" uid="uid://c4nwp7n3x8i0s" path="res://Assets/Effects/Shaders/64FadedCircle.png" id="2_ii8om"]
[ext_resource type="Script" uid="uid://dqhex5uyycpmy" path="res://Scripts/Player/States/air.gd" id="3_erevo"]
[ext_resource type="Script" uid="uid://bboq2wxo458qt" path="res://Scripts/Player/States/grounded.gd" id="3_gri1l"]
[ext_resource type="Script" uid="uid://cd8xjopapxhmk" path="res://Scripts/Player/States/wall.gd" id="5_2gvn5"]
[ext_resource type="Script" uid="uid://bc7m3s8q6ul88" path="res://Scripts/Player/States/dead.gd" id="6_sixxt"]
[ext_resource type="Script" uid="uid://ivfkaytss4d5" path="res://Scripts/Player/Internal/character.gd" id="7_2gvn5"]
[ext_resource type="SpriteFrames" uid="uid://brf7fl6y2cs63" path="res://Assets/Sprites/Actors/Animated Sprites Base/BaseRight.tres" id="8_2gvn5"]
[ext_resource type="SpriteFrames" uid="uid://bu3gd73sgmrj7" path="res://Assets/Sprites/Actors/Animated Sprites Base/BaseLeft.tres" id="9_sixxt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2gvn5"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ii8om"]
size = Vector2(10, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_sixxt"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sixxt"]
size = Vector2(8, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_erevo"]
size = Vector2(12, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxqjj"]
size = Vector2(10, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2mg2"]
size = Vector2(2, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwsk7"]
size = Vector2(10, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2tyb8"]
size = Vector2(2, 15)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hvnhq"]
shader = ExtResource("2_7oum1")
shader_parameter/has_special = false
shader_parameter/special_hair_color = Color(0.86, 0.8428, 0.51600003, 1)
shader_parameter/hair_color = Color(0.81960785, 0.81960785, 0.81960785, 1)
shader_parameter/special_eye_color = Color(1, 0.95, 0, 1)
shader_parameter/eye_color = Color(0.11764706, 0.59607846, 0.16470589, 1)
shader_parameter/special_outline_color = Color(0.5, 0.475, 0, 1)
shader_parameter/has_other_overrides = true
shader_parameter/special_overrides = PackedColorArray(0.7137255, 0.7137255, 0.7137255, 1)
shader_parameter/special_override_colors = PackedColorArray(0.81960785, 0.8039216, 0.49019608, 1)
shader_parameter/stamina_show = false
shader_parameter/stamina_color = Color(1, 1, 1, 1)
shader_parameter/stamina_thickness = 1.0
shader_parameter/white_flash = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2u4vx"]
size = Vector2(1, 4)

[sub_resource type="Animation" id="Animation_sixxt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("C:material:shader_parameter/stamina_show")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("C:material:shader_parameter/white_flash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("C:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2gvn5"]
resource_name = "normal_death"
length = 0.7333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("C:material:shader_parameter/stamina_show")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 0.7333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("C:material:shader_parameter/white_flash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0667, 0.2, 0.2667, 0.4, 0.4667, 0.6667, 0.7333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("C:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sixxt"]
_data = {
&"RESET": SubResource("Animation_sixxt"),
&"normal_death": SubResource("Animation_2gvn5")
}

[node name="PlayerBase" type="CharacterBody2D" groups=["Player"]]
collision_layer = 0
collision_mask = 16391
platform_floor_layers = 4294901767
platform_wall_layers = 7
script = ExtResource("1_pcxub")
DEBUG = true
PLAYER_NAME = "Peepa"
basic_movenment = true
advanced_movenment = true
normal_climb = true
cutting_value = -10.0

[node name="PlayerCollisions" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_2gvn5")
debug_color = Color(0, 0.5950001, 0.7, 0.13725491)

[node name="GhostBoxDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7
monitorable = false

[node name="GhostBox" type="CollisionShape2D" parent="GhostBoxDetector"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_ii8om")
debug_color = Color(0, 0.5950001, 0.7, 0.13725491)

[node name="BackLight" type="PointLight2D" parent="."]
z_index = -1
color = Color(1, 0.9916667, 0.75, 1)
energy = 0.1
range_z_max = -1
texture = ExtResource("2_ii8om")
offset = Vector2(0, -8)
texture_scale = 0.6

[node name="FrontLight" type="PointLight2D" parent="."]
z_index = -1
color = Color(1, 0.9916667, 0.75, 1)
energy = 0.1
range_z_min = 1
texture = ExtResource("2_ii8om")
offset = Vector2(0, -8)
texture_scale = 0.5

[node name="S" type="Node" parent="."]

[node name="Air" type="Node" parent="S"]
script = ExtResource("3_erevo")

[node name="Dash" type="Node" parent="S"]

[node name="Dazed" type="Node" parent="S"]

[node name="Floating" type="Node" parent="S"]

[node name="Frozen" type="Node" parent="S"]

[node name="Ghost - need to write down" type="Node" parent="S"]

[node name="Grounded" type="Node" parent="S"]
script = ExtResource("3_gri1l")

[node name="Kick" type="Node" parent="S"]

[node name="Slide" type="Node" parent="S"]

[node name="Swim" type="Node" parent="S"]

[node name="Swing" type="Node" parent="S"]

[node name="Wall" type="Node" parent="S"]
script = ExtResource("5_2gvn5")

[node name="LastBlink" type="Timer" parent="S/Wall"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="BlinkTimeout" type="Timer" parent="S/Wall"]
process_callback = 0
wait_time = 0.05
one_shot = true

[node name="Dead" type="Node" parent="S"]
script = ExtResource("6_sixxt")

[node name="DeathTime" type="Timer" parent="S/Dead"]
wait_time = 1.2
one_shot = true

[node name="Cutscene" type="Node" parent="S"]

[node name="Timers" type="Node" parent="."]

[node name="SlideReqTime" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="SlideLeaveCooldown" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="DashReqTime" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="DashMaxTime" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="DashFloorCooldown" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="AttackCooldown" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="InteractCooldown" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="PrecisionJumpTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="InteractionRange" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionRange"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_sixxt")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 256
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_sixxt")
debug_color = Color(0.99, 0, 0.31349993, 0)

[node name="SpecialZone" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpecialZone"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_erevo")
debug_color = Color(0, 1, 0, 0)

[node name="ConvenienceRays" type="Node2D" parent="."]

[node name="VelocityNextPosition" type="RayCast2D" parent="ConvenienceRays"]
target_position = Vector2(10, 0)
collision_mask = 7
hit_from_inside = true

[node name="VelocityNextTopPosition" type="RayCast2D" parent="ConvenienceRays"]
position = Vector2(0, -15)
target_position = Vector2(10, 0)
collision_mask = 7
hit_from_inside = true

[node name="VelocityCeilingSnapLeft" type="RayCast2D" parent="ConvenienceRays"]
position = Vector2(-3, -15)
target_position = Vector2(0, -10)
collision_mask = 7
hit_from_inside = true

[node name="VelocityCeilingSnapRight" type="RayCast2D" parent="ConvenienceRays"]
position = Vector2(3, -15)
target_position = Vector2(0, -10)
collision_mask = 7
hit_from_inside = true

[node name="VelocityCeilingLeft" type="RayCast2D" parent="ConvenienceRays"]
position = Vector2(-5, -15)
target_position = Vector2(0, -10)
collision_mask = 7
hit_from_inside = true

[node name="VelocityCeilingRight" type="RayCast2D" parent="ConvenienceRays"]
position = Vector2(5, -15)
target_position = Vector2(0, -10)
collision_mask = 7
hit_from_inside = true

[node name="CeilingSnapLeft" type="RayCast2D" parent="ConvenienceRays"]
position = Vector2(-3, -15)
target_position = Vector2(-2, 0)
collision_mask = 7
hit_from_inside = true

[node name="CeilingSnapRight" type="RayCast2D" parent="ConvenienceRays"]
position = Vector2(3, -15)
target_position = Vector2(2, 0)
collision_mask = 7
hit_from_inside = true

[node name="WallTypeRays" type="Node2D" parent="."]
visible = false

[node name="WallRight" type="RayCast2D" parent="WallTypeRays"]
position = Vector2(6, -15)
target_position = Vector2(0, 15)
collision_mask = 7
hit_from_inside = true

[node name="WallLeft" type="RayCast2D" parent="WallTypeRays"]
position = Vector2(-6, -15)
target_position = Vector2(0, 15)
collision_mask = 7
hit_from_inside = true

[node name="WallRightDown" type="RayCast2D" parent="WallTypeRays"]
position = Vector2(6, 0)
target_position = Vector2(0, -15)
collision_mask = 7
hit_from_inside = true

[node name="WallLeftDown" type="RayCast2D" parent="WallTypeRays"]
position = Vector2(-6, 0)
target_position = Vector2(0, -15)
collision_mask = 7
hit_from_inside = true

[node name="NormalWallRight" type="RayCast2D" parent="WallTypeRays"]
position = Vector2(6, -15)
target_position = Vector2(0, 15)
hit_from_inside = true

[node name="NormalWallLeft" type="RayCast2D" parent="WallTypeRays"]
position = Vector2(-6, -15)
target_position = Vector2(0, 15)
hit_from_inside = true

[node name="SlowWallRight" type="RayCast2D" parent="WallTypeRays"]
visible = false
position = Vector2(6, -15)
target_position = Vector2(0, 15)
collision_mask = 2
hit_from_inside = true

[node name="SlowWallLeft" type="RayCast2D" parent="WallTypeRays"]
visible = false
position = Vector2(-6, -15)
target_position = Vector2(0, 15)
collision_mask = 2
hit_from_inside = true

[node name="IceWallRight" type="RayCast2D" parent="WallTypeRays"]
visible = false
position = Vector2(6, -15)
target_position = Vector2(0, 15)
collision_mask = 4
hit_from_inside = true

[node name="IceWallLeft" type="RayCast2D" parent="WallTypeRays"]
visible = false
position = Vector2(-6, -15)
target_position = Vector2(0, 15)
collision_mask = 4
hit_from_inside = true

[node name="NonWallRight" type="RayCast2D" parent="WallTypeRays"]
visible = false
position = Vector2(6, -15)
target_position = Vector2(0, 15)
collision_mask = 16384
hit_from_inside = true

[node name="NonWallLeft" type="RayCast2D" parent="WallTypeRays"]
visible = false
position = Vector2(-6, -15)
target_position = Vector2(0, 15)
collision_mask = 16384
hit_from_inside = true

[node name="VelocityBouncePadHigh" type="RayCast2D" parent="WallTypeRays"]
position = Vector2(0, -11)
target_position = Vector2(6, 0)
collision_mask = 512
hit_from_inside = true

[node name="VelocityBouncePadLow" type="RayCast2D" parent="WallTypeRays"]
position = Vector2(0, -5)
target_position = Vector2(6, 0)
collision_mask = 512
hit_from_inside = true

[node name="GroundTypeRays" type="Node2D" parent="."]
visible = false

[node name="NormalGroundLeft" type="RayCast2D" parent="GroundTypeRays"]
position = Vector2(-5, 0)
target_position = Vector2(0, 2)
hit_from_inside = true

[node name="NormalGroundMiddle" type="RayCast2D" parent="GroundTypeRays"]
target_position = Vector2(0, 2)
hit_from_inside = true

[node name="NormalGroundRight" type="RayCast2D" parent="GroundTypeRays"]
position = Vector2(5, 0)
target_position = Vector2(0, 2)
hit_from_inside = true

[node name="SlowGroundLeft" type="RayCast2D" parent="GroundTypeRays"]
position = Vector2(-5, 0)
target_position = Vector2(0, 2)
collision_mask = 2
hit_from_inside = true

[node name="SlowGroundMiddle" type="RayCast2D" parent="GroundTypeRays"]
target_position = Vector2(0, 2)
collision_mask = 2
hit_from_inside = true

[node name="SlowGroundRight" type="RayCast2D" parent="GroundTypeRays"]
position = Vector2(5, 0)
target_position = Vector2(0, 2)
collision_mask = 2
hit_from_inside = true

[node name="IceGroundLeft" type="RayCast2D" parent="GroundTypeRays"]
position = Vector2(-5, 0)
target_position = Vector2(0, 2)
collision_mask = 4
hit_from_inside = true

[node name="IceGroundMiddle" type="RayCast2D" parent="GroundTypeRays"]
target_position = Vector2(0, 2)
collision_mask = 4
hit_from_inside = true

[node name="IceGroundRight" type="RayCast2D" parent="GroundTypeRays"]
position = Vector2(5, 0)
target_position = Vector2(0, 2)
collision_mask = 4
hit_from_inside = true

[node name="VelocityBouncePad" type="RayCast2D" parent="GroundTypeRays"]
target_position = Vector2(0, 2)
collision_mask = 512
hit_from_inside = true

[node name="DeathAreas" type="Node2D" parent="."]

[node name="Up" type="Area2D" parent="DeathAreas"]
collision_layer = 0
collision_mask = 16399
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathAreas/Up"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_nxqjj")
debug_color = Color(0.7, 0, 0, 0)

[node name="Right" type="Area2D" parent="DeathAreas"]
collision_layer = 0
collision_mask = 16399
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathAreas/Right"]
position = Vector2(6, -7.5)
shape = SubResource("RectangleShape2D_c2mg2")
debug_color = Color(0.7, 0, 0, 0)

[node name="Down" type="Area2D" parent="DeathAreas"]
collision_layer = 0
collision_mask = 16399
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathAreas/Down"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_xwsk7")
debug_color = Color(0.7, 0, 0, 0)

[node name="Left" type="Area2D" parent="DeathAreas"]
collision_layer = 0
collision_mask = 16399
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathAreas/Left"]
position = Vector2(-6, -7.5)
shape = SubResource("RectangleShape2D_2tyb8")
debug_color = Color(0.7, 0, 0, 0)

[node name="C" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_hvnhq")
script = ExtResource("7_2gvn5")

[node name="Right" type="AnimatedSprite2D" parent="C"]
use_parent_material = true
sprite_frames = ExtResource("8_2gvn5")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.19539349
offset = Vector2(0, -9)

[node name="Left" type="AnimatedSprite2D" parent="C"]
visible = false
use_parent_material = true
sprite_frames = ExtResource("9_sixxt")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.19539349
offset = Vector2(0, -9)

[node name="InWater" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="InWater"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_2u4vx")
debug_color = Color(0.62699986, 0, 0.99, 0)

[node name="DeathAnimations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sixxt")
}

[node name="SpecialAnimations" type="AnimationPlayer" parent="."]

[connection signal="timeout" from="S/Dead/DeathTime" to="S/Dead" method="_on_death_time_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="area_entered" from="SpecialZone" to="." method="_on_special_zone_area_entered"]
[connection signal="area_exited" from="SpecialZone" to="." method="_on_special_zone_area_exited"]
[connection signal="animation_finished" from="C/Right" to="C" method="_on_right_animation_finished"]
